# apple_gfx_base

./: .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  README.md  WORKSPACE
apple_gfx_base.tulsiproj/: project.tulsiconf
apple_gfx_base.tulsiproj/Configs/: ios_metal.tulsigen  ios_opengles.tulsigen  macos_metal.tulsigen  macos_opengl.tulsigen  tvos_metal.tulsigen  tvos_opengles.tulsigen
config/graphics/: BUILD
config/platform/: BUILD
examples/: CMakeLists.txt  Info.plist  main.h  main.m
profiles/: BUILD  ios.mobileprovision
rules/: metal.bzl
test_app/: BUILD
test_app/app/: BUILD  app.cpp  app.hpp  math.cpp  math.hpp  mesh_builder.cpp  mesh_builder.hpp  vertex_types.hpp
test_app/common/: BUILD  error.cpp  error.hpp  error_or.hpp  graphics_defines.h  platform_defines.h  semaphore.cpp  semaphore.hpp  time.hpp  time_apple.cpp
test_app/entry/appkit/: ARSInputRouter.h  ARSInputRouter.mm  ARSSurfaceView.h  ARSSurfaceView.mm  ARSTAppDelegate.h  ARSTAppDelegate.mm  BUILD  main.m
test_app/entry/common/: ARSDefines.h  ARSSurfaceView.h  ARSSurfaceViewDelegate.h  ARSTViewController.h  ARSTViewController.mm  BUILD  surface_provider.h
test_app/entry/gl/: ARSGLSurfaceView.h  ARSGLSurfaceView.mm  BUILD  surface_provider.mm
test_app/entry/metal/: ARSMetalSurfaceView.h  ARSMetalSurfaceView.m  BUILD  surface_provider.mm
test_app/entry/uikit/: ARSSurfaceView.h  ARSSurfaceView.mm  ARSTAppDelegate.h  ARSTAppDelegate.mm  BUILD  main.m
test_app/gfx/: BUILD  camera.cpp  camera.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_renderer.cpp  mesh_renderer.hpp  primitive.cpp  primitive.hpp  primitive_type.hpp  renderer.hpp  scene.cpp  scene.hpp  shader.hpp  surface.hpp  transform.cpp  transform.hpp  vertex_descriptor.cpp  vertex_descriptor.hpp  vertex_member.hpp  vertex_member_type.hpp
test_app/gfx/apple/: BUILD  bindings.cpp  error.cpp  error.hpp  math.cpp  math.hpp  surface.hpp
test_app/input/: BUILD  buffer.cpp  buffer.hpp  button.hpp  button_event.cpp  button_event.hpp  event.cpp  event.hpp  pointer_event.cpp  pointer_event.hpp  state.hpp
tools/cmake/: EmbedAppleFrameworks.cmake
(+49 files in other folders)
